--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -103,3 +103,37 @@ body {
     margin-left: 29%;
     margin-bottom: 4px;
 }
+
+/*backrooms.html*/
+ 
+.topnavbackrooms {
+  overflow: hidden;
+  background-color: #cee409;
+}
+
+.topnavbackrooms a{
+  float: left;
+  color: #000000;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnavbackrooms a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnavbackrooms a.active {
+  background-color: #0fb87a;
+  color: white;
+}
+
+.center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 18px;
+  }
