--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -49,16 +49,14 @@ body {
   .float-parent-element { 
     width: 100%; 
 } 
+
 .float-child-element { 
     display: block;
     margin: 0 auto;
 } 
+
 .blue { 
-    margin-top: 40px;
-    margin-left: 35%; 
-    margin-right: 35%;
-    height: 50%; 
-    margin-bottom: 2%;
+    text-align: center;
 } 
 
 /*software.html*/
