--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -102,6 +102,11 @@ body {
    align-items: center;
 }
 
+span {
+    display:hidden;
+    visibility: hidden;
+}
+
 /*backrooms.html*/
  .bodybackrooms{
     background-image: url('../pictures/backrooms.jpg');
