--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -102,6 +102,10 @@ body {
    align-items: center;
 }
 
+ #watermark span{
+   visibility: none;
+}
+
 /*backrooms.html*/
  .bodybackrooms{
     background-image: url('../pictures/backrooms.jpg');
