--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -123,7 +123,16 @@ body {
     display: none;   
 }
 
-/*backrooms.html*/
+canvas{
+ position: absolute;
+ top 50%;
+ left: 50%;
+ width: 311px;
+ height: 178px;
+ transform: translate(-50%, -50%);
+}   
+    
+ /*backrooms.html*/
  .bodybackrooms{
     background-image: url('../pictures/backrooms.jpg');
     background-repeat: no-repeat;
