--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -174,3 +174,11 @@ body {
   text-align: center;
   font-size: 3em;
  }
+
+ /*stream*/
+ .streamz {
+  margin-top: 50px;
+  display: flex;   
+  justify-content: center;   
+  align-items: center;
+}
