--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -184,3 +184,12 @@ canvas{
   font-size: 3em;
  }
 
+/*stream*/
+
+.streamz {
+  margin-top: 50px;
+  display: flex;   
+  justify-content: center;   
+  align-items: center;
+}
+
