--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -189,6 +189,9 @@ kbd {
 
   .body404{
     background-color: black;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    user-select: none;
   }
 
  .pos{
