--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -69,6 +69,15 @@ body {
   margin-right: 10%;
 }
 
+.maincard2{
+  display: flex;
+  justify-content: center; /* Horizontal zentrieren */
+  align-items: center; /* Vertikal zentrieren */
+  margin-right: 10%;
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+
 .card {
   margin-top: 2%;
   margin-left: 12%;
