--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -1,111 +1,50 @@
 /* Style the body */
-/*index.html, software.html & games.html body*/
+/*index.html,body*/
 body {
-    font-family: Arial;
-    margin: 0;
-  }
-  
-  /* Header/Logo Title */
-  .header {
-    padding: 60px;
-    text-align: center;
-    background: #11b4d1;
-    color: white;
-    font-size: 30px;
-  }
-  
-  /* Page Content */
-  .content {padding:20px;}
-
-  body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  .topnav {
-    overflow: hidden;
-    background-color: #11b4d1;
-  }
-  
-  .topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  .topnav a.active {
-    background-color: #0fb87a;
-    color: white;
-  }
-
-  .float-parent-element { 
-    width: 100%; 
-} 
-
-.float-child-element { 
-    display: block;
-    margin: 0 auto;
-    margin-bottom: 30px;
-} 
-
-.blue { 
-    text-align: center;
-} 
-
-/*software.html*/
-
-.maincard{
-  display: flex;
-  justify-content: center; /* Horizontal zentrieren */
-  align-items: center; /* Vertikal zentrieren */
-  margin-right: 10%;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
 }
 
-.maincard2{
-  display: flex;
-  justify-content: center; /* Horizontal zentrieren */
-  align-items: center; /* Vertikal zentrieren */
-  margin-right: 10%;
-  margin-bottom: 3%;
-}
-
-.card {
-  margin-top: 2%;
-  margin-left: 12%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 450px;
-  height: 550px;
+.custom-header {
+  padding: 60px;
   text-align: center;
-  font-family: arial;
-  }
-  
-.card button {
-    border: none;
-    outline: 0;
-    padding: 12px;
-    color: white;
-    background-color: #000;
-    text-align: center;
-    cursor: pointer;
-    width: 100%;
-    font-size: 18px;
-  }
-  
-.card button:hover {
-    background-color: #4f4f4f;
-  }
+  background-color: #11b4d1;
+  color: white;
+  font-size: 45px;
+}
 
-  .h{
-    text-align: center;
-  }
+.custom-navbar {
+  background-color: #11b4d1;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+  font-size: 1.2rem;
+  color: #f2f2f2;
+}
+
+.navbar-dark .navbar-nav:hover .nav-link:hover {
+  font-size: 1.2rem;
+  background-color: #ddd;
+  color: black;
+}
+
+.navbar-dark .navbar-nav .nav-item.active .nav-link {
+  font-size: 1.2rem;
+  background-color: #0fb87a;
+  color: white;
+}
+
+.blue {
+  text-align: center;
+}
+
+.tool-icons img {
+  transition: transform 0.2s ease;
+}
+
+.tool-icons img:hover {
+  transform: scale(1.2);
+}
 
 /*games.html*/
 
@@ -276,14 +215,5 @@ kbd {
   text-align: center;
   text-decoration: none;
   font-size: 25px;
-}
-
-/*stream*/
-
-.streamz {
-  margin-top: 50px;
-  display: flex;   
-  justify-content: center;   
-  align-items: center;
 }
 
