--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -19,6 +19,7 @@ body {
 
 .navbar-dark .navbar-nav .nav-link {
   font-size: 1.2rem;
+  padding-left: 10px;
   color: #f2f2f2;
 }
 
@@ -30,6 +31,7 @@ body {
 
 .navbar-dark .navbar-nav .nav-item.active .nav-link {
   font-size: 1.2rem;
+  padding-left: 10px;
   background-color: #0fb87a;
   color: white;
 }
@@ -44,6 +46,10 @@ body {
 
 .tool-icons img:hover {
   transform: scale(1.2);
+}
+
+.navbar-toggler {
+  margin: 6px;
 }
 
 /*games.html*/
